--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,24 @@
-// app global css in SCSS form
+.main-container {
+  padding: 0px 40px 22px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+}
+
+.bg {
+  width: 100%;
+  padding: 0 3em 3em 3em;
+  background-color: #e9e9e9;
+}
+
+.title {
+  font-size: 29px;
+}
+
+.divisor-inline {
+  border-bottom: solid #000000;
+  border-width: thin;
+  opacity: 0.2;
+  margin: 0;
+  padding: 0;
+}
