--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -22,3 +22,21 @@
   margin: 0;
   padding: 0;
 }
+
+.btn-cadastrar {
+  font-size: 15px;
+  font-weight: bold;
+  height: 40px;
+  color: #ffffff;
+  background-color: #1976d2;
+  min-width: 150px;
+}
+
+.btn-voltar {
+  font-size: 15px;
+  font-weight: bold;
+  height: 40px;
+  color: #000000;
+  background-color: #dddddd;
+  min-width: 150px;
+}
